# drf_course_work

./: .env_example  README.md  dump.rdb  profile  pyproject.toml
config/: settings.py  urls.py
habits/: api.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_periodicity.py  0004_habit_last_notification.py
users/: admin.py  models.py  serializers.py  urls.py
users/management/commands/: create_user.py
users/migrations/: 0001_initial.py  0002_user_tlg_bot_token_user_tlg_chat_id.py  0003_remove_user_tlg_bot_token.py
